# salvo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  Doxyfile.cfg  README.md  license  package.xml  run.sh
include/: LogFilter.h  LogItem.h  LogLevel.h  LogList.h  LogManager.h  LogMessage.h  NodeInfo.h  NodeItem.h  NodeObserver.hc  Observer.h  Subject.h  data_subscriber.h  log_item.h  log_manager.h  ncursesLib.h  node_item.h  salvo.h  subscription_manager.h
include/core/: abstract_gui.h  csv_writer.h  data_subscriber.h  observer.h  subject.h
include/impl/: csv_subscriber.h  qt_gui.h  ros2_subscriber.h
include/msgs/: filter_event.h  filter_node.h  log_message.h  node_info.h  subscription_choice.h
include/salvo/: colors.h  log.h  ros2_log.h
src/: main.cpp  run_data_publisher.cpp  run_guardo.cpp  run_salvo.cpp  run_test.cpp
src/impl/: qt_gui.cpp  ros2_subscriber.cpp
